# gpu-holder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  ROADMAP.md  SECURITY.md  dev-log.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support.yml
.github/workflows/: ci.yml
docs/: architecture.md  backend_strategy.md  development_log.md  release.md  requirements.md  testing.md  tutorial.md
examples/: gpu-holder.toml
examples/monitoring/: README.md  gpu-holder-metrics.service  gpu-holder-metrics.timer  prometheus.yml
src/gpu_holder/: __init__.py  advisor.py  alerts.py  backends.py  cli.py  completion.py  config.py  controller.py  dashboard.py  diagnostics.py  driver_backend.py  events.py  explain.py  grafana.py  history.py  manual.py  metrics.py  models.py  monitor.py  monitoring_bundle.py  policy.py  process_matching.py  reasons.py  service.py  simulator.py  state.py  status_health.py  telemetry.py  torch_backend.py  tui.py  units.py  worker.py  worker_controls.py
tests/: test_advisor.py  test_alerts.py  test_backends.py  test_cli.py  test_completion.py  test_config_consistency.py  test_controller.py  test_core_cli.py  test_diagnostics.py  test_events.py  test_explain.py  test_grafana.py  test_history.py  test_manual.py  test_metrics.py  test_module_entrypoint.py  test_monitor.py  test_monitoring_bundle.py  test_policy.py  test_process_matching.py  test_project_metadata.py  test_reasons.py  test_service.py  test_simulator.py  test_status_health.py  test_telemetry.py  test_tui.py  test_units.py  test_worker.py
